--- a/build.xml
+++ b/build.xml
@@ -1,25 +1,25 @@
 <project name="Repackager" default="repackage">
 
-    <property file="${basedir}/../src/com/liferay/portal/util/build.properties"/>
-    <property name="lib.app" value="${basedir}/../dotCMS/WEB-INF/lib"/>
-    <property name="web-inf.dir" value="${basedir}/../dotCMS/WEB-INF"/>
-    <property name="dotcms.dir" value="${basedir}/../dotCMS"/>
-    <property name="src-conf.dir" value="${basedir}/../src-conf"/>
+    <property name="dotcms.home" value="${basedir}/../dotCMS"/>
+    <property name="dotcms.dir" value="${dotcms.home}/dotCMS"/>
+    <property name="lib.app" value="${dotcms.dir}/WEB-INF/lib"/>
+    <property name="web-inf.dir" value="${dotcms.dir}/WEB-INF"/>
+    <property name="src-conf.dir" value="${dotcms.home}/src-conf"/>
+
+    <property name="dotcms.jar" value="dotcms_2.6.jar"/>
+    <property file="${dotcms.home}/src/com/liferay/portal/util/build.properties"/>
 
     <path id="files-classpath">
-        <fileset dir="${lib.app}">
+        <fileset dir="${basedir}">
             <include name="jarjar-1.4.jar"/>
             <include name="packager-taks.jar"/>
-        </fileset>
-
-        <fileset dir="buildlibs">
             <include name="commons-io-2.0.1.jar"/>
         </fileset>
     </path>
 
     <target name="clean">
-        <delete dir="${basedir}/repackage" failonerror="false"/>
-        <mkdir dir="${basedir}/repackage"/>
+        <delete dir="${basedir}/build" failonerror="false"/>
+        <mkdir dir="${basedir}/build"/>
     </target>
 
     <target name="repackage" depends="clean">
@@ -30,19 +30,19 @@
             </classpath>
         </taskdef>
 
-        <packagerTask outputFolder="${basedir}/repackage"
-                      dotcmsJar="${lib.app}/dotcms_${dotcms.release.version}.jar"
+        <packagerTask outputFolder="${basedir}/build"
+                      dotcmsJar="${basedir}/${dotcms.jar}"
                       dotVersion="${dotcms.release.version}"
                       renameservices="true"
                       multiplejars="true"
                       jspFolder="${dotcms.dir}">
 
-            <fileset dir="${lib.app}" id="">
+            <fileset dir="${basedir}">
 
                 <include name="**/*.jar"/>
 
                 <!--dotcms jars-->
-                <exclude name="dotcms_${dotcms.release.version}.jar"/>
+                <exclude name="${dotcms.jar}"/>
                 <exclude name="ee-af5bcc3ddb.jar"/>
                 <exclude name="ant-tooling.jar"/>
                 <exclude name="packager-taks.jar"/>
@@ -71,24 +71,24 @@
             <!--++++++++++++++++++++++++++++++++++++++-->
             <!--++++++++++++Special cases+++++++++++++-->
             <!--We can repackage them but not rename their services files-->
-            <dependency path="${lib.app}/xpp3_min-1.1.4c.jar" generate="true"/>
-            <dependency path="${lib.app}/h2-1.3.169.jar" generate="true"/>
-            <dependency path="${lib.app}/jaxen-1.1.3.jar" generate="true">
+            <dependency path="${basedir}/xpp3_min-1.1.4c.jar" generate="true"/>
+            <dependency path="${basedir}/h2-1.3.169.jar" generate="true"/>
+            <dependency path="${basedir}/jaxen-1.1.3.jar" generate="true">
                 <ignore parentpackage="org.w3c"/><!--Contains just ONE class and it is a common package, using it as a rule breaks the code-->
             </dependency>
             <!--We can repackage them but not rename their services files-->
 
             <!--We have to exclude some packages in here, tomcat complains-->
-            <dependency path="${lib.app}/tika-app-1.3.jar" generate="true" renameservices="true">
+            <dependency path="${basedir}/tika-app-1.3.jar" generate="true" renameservices="true">
                 <ignore parentpackage="org.apache.commons.logging"/>
                 <ignore parentpackage="org.apache.log4j"/>
             </dependency>
 
             <!--++++++++++++++++++++++++++++++++++++++-->
             <!--List of dependencies to check if there are dependencies to old packages -->
-            <dependency path="${lib.app}/ant-tooling.jar"/>
-            <dependency path="${lib.app}/packager-taks.jar"/>
-            <dependency path="${lib.app}/ee-af5bcc3ddb.jar"/>
+            <dependency path="${basedir}/ant-tooling.jar"/>
+            <dependency path="${basedir}/packager-taks.jar"/>
+            <dependency path="${basedir}/ee-af5bcc3ddb.jar"/>
 
             <!--++++++++++++++++++++++++++++++++++++++-->
             <!--++++++++++++++Resources+++++++++++++++-->
@@ -123,7 +123,7 @@
             <dependency path="${web-inf.dir}/tld/old/struts-template.tld"/>
             <dependency path="${web-inf.dir}/tld/old/struts-tiles.tld"/>
 
-            <dependency path="${basedir}/buildlibs/log4j.xml"/>
+            <dependency path="${dotcms.home}/libs/buildlibs/log4j.xml"/>
 
             <dependency path="${src-conf.dir}/dotmarketing-config.properties"/>
             <dependency path="${src-conf.dir}/commons-logging.properties"/>
