--- a/build.xml
+++ b/build.xml
@@ -64,6 +64,7 @@
                 <!--We can NOT alter these jars manifest-->
 
                 <!--We CAN repackage them but applying special rules-->
+                <exclude name="myspell.jar"/>
                 <exclude name="xpp3_min-1.1.4c.jar"/>
                 <exclude name="h2-1.3.169.jar"/>
                 <exclude name="jaxen-1.1.3.jar"/>
@@ -71,6 +72,8 @@
                 <!--We CAN repackage them but applying special rules-->
 
                 <!--FIXME-->
+                <exclude name="cactus.integration.ant-1.8.0.jar"/><!--Ant build files complains if we repackage this jar-->
+                <exclude name="cargo-ant-0.9.jar"/><!--Ant build files complains if we repackage this jar-->
                 <exclude name="quartz-all-1.8.6.jar"/>
                 <exclude name="org.springframework*.jar"/>
                 <!--FIXME-->
@@ -86,6 +89,11 @@
             </dependency>
             <!--We can repackage them but not rename their services files-->
 
+            <!--We have to exclude some packages in here, Ant build files complains-->
+            <dependency path="${basedir}/myspell.jar" generate="true">
+                <ignore parentpackage="org.apache.tools"/>
+            </dependency>
+
             <!--We have to exclude some packages in here, tomcat complains-->
             <dependency path="${basedir}/tika-app-1.3.jar" generate="true" renameservices="true">
                 <ignore parentpackage="org.apache.commons.logging"/>
@@ -95,9 +103,12 @@
 
             <!--++++++++++++++++++++++++++++++++++++++-->
             <!--List of dependencies to check if there are dependencies to old packages -->
+            <dependency path="${basedir}/cactus.integration.ant-1.8.0.jar"/>
+            <dependency path="${basedir}/cargo-ant-0.9.jar"/>
             <dependency path="${basedir}/quartz-all-1.8.6.jar"/>
             <dependency path="${basedir}/ant-tooling.jar"/>
             <dependency path="${basedir}/packager-taks.jar"/>
+            <dependency path="${basedir}/jarjar-1.4.jar"/>
             <dependency path="${basedir}/ee-6ecdf86f7f.jar"/>
 
             <!--
@@ -119,6 +130,8 @@
 
             <!--++++++++++++++++++++++++++++++++++++++-->
             <!--++++++++++++++Resources+++++++++++++++-->
+            <dependency path="${dotcms.home}/build.xml"/>
+
             <dependency path="${web-inf.dir}/web.xml"/>
             <dependency path="${web-inf.dir}/dwr.xml"/>
             <dependency path="${web-inf.dir}/springmvc-servlet.xml"/>
