--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,8 @@
         <fileset dir="${basedir}">
             <include name="jarjar-1.4.jar"/>
             <include name="packager-taks.jar"/>
+        </fileset>
+        <fileset dir="${basedir}/buildlibs">
             <include name="commons-io-2.0.1.jar"/>
         </fileset>
     </path>
@@ -51,7 +53,6 @@
 
                 <!--dotcms jars-->
                 <exclude name="${dotcms.jar}"/>
-                <exclude name="ee-6ecdf86f7f.jar"/>
                 <exclude name="ant-tooling.jar"/>
                 <exclude name="packager-taks.jar"/>
                 <exclude name="jarjar-1.4.jar"/>
@@ -66,7 +67,6 @@
                 <!--We CAN repackage them but applying special rules-->
                 <exclude name="myspell.jar"/>
                 <exclude name="xpp3_min-1.1.4c.jar"/>
-                <exclude name="h2-1.3.169.jar"/>
                 <exclude name="jaxen-1.1.3.jar"/>
                 <exclude name="tika-app-1.3.jar"/>
                 <!--We CAN repackage them but applying special rules-->
@@ -83,7 +83,6 @@
             <!--++++++++++++Special cases+++++++++++++-->
             <!--We can repackage them but not rename their services files-->
             <dependency path="${basedir}/xpp3_min-1.1.4c.jar" generate="true"/>
-            <dependency path="${basedir}/h2-1.3.169.jar" generate="true"/>
             <dependency path="${basedir}/jaxen-1.1.3.jar" generate="true">
                 <ignore parentpackage="org.w3c"/><!--Contains just ONE class and it is a common package, using it as a rule breaks the code-->
             </dependency>
@@ -109,7 +108,6 @@
             <dependency path="${basedir}/ant-tooling.jar"/>
             <dependency path="${basedir}/packager-taks.jar"/>
             <dependency path="${basedir}/jarjar-1.4.jar"/>
-            <dependency path="${basedir}/ee-6ecdf86f7f.jar"/>
 
             <!--
             Explicit naming rules for jars
