--- a/build.xml
+++ b/build.xml
@@ -77,6 +77,7 @@
                 <exclude name="cargo-ant-0.9.jar"/><!--Ant build files complains if we repackage this jar-->
                 <exclude name="quartz-all-1.8.6.jar"/>
                 <exclude name="org.springframework*.jar"/>
+                <exclude name="h2-1.3.169.jar"/>
                 <!--FIXME-->
             </fileset>
 
