--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,7 @@
             <dependency path="${basedir}/tika-app-1.3.jar" generate="true" renameservices="true">
                 <ignore parentpackage="org.apache.commons.logging"/>
                 <ignore parentpackage="org.slf4j"/>
+                <ignore parentpackage="license"/>
             </dependency>
 
             <!--++++++++++++++++++++++++++++++++++++++-->
