--- a/build.xml
+++ b/build.xml
@@ -73,6 +73,7 @@
                 <exclude name="jaxen-1.1.3.jar"/>
                 <exclude name="tika-app-1.3.jar"/>
             	<exclude name="jasperreports-3.5.0.jar"/>
+                <exclude name="felix-4.2.1.jar"/>
                 <!--We CAN repackage them but applying special rules-->
 
                 <!--FIXME-->
@@ -113,7 +114,7 @@
 
             <!--OSGI-->
             <dependency path="${basedir}/felix-4.2.1.jar" generate="true" renameservices="false"/>
-   
+
             <!--++++++++++++++++++++++++++++++++++++++-->
             <!--List of dependencies to check if there are dependencies to old packages -->
             <dependency path="${basedir}/cactus.integration.ant-1.8.0.jar"/>
