--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
+apply plugin:'java'
+apply plugin:'maven'
+
+import org.gradle.api.internal.artifacts.publish.DefaultPublishArtifact
 
 task publishProperties {
     ext.groupId = 'com.dotcms.lib'
@@ -10,44 +11,53 @@ task publishProperties {
     ext.password = 'XYZ'
 }
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
+def repackagedJars = ["dot.odmg_ukv_1", "dot.abdera-extensions-html_0.4.0-incubating_1"]
 
-            String jarFolder = "build"
-            //String jarName = "dot.abdera-extensions-html_0.4.0-incubating_1.jar"
-            String jarName = "dot.odmg_ukv_1.jar"
-            JarInfo jarInfo = new JarInfo(jarName, publishProperties.groupId, publishProperties.validatonURL);
-
-            println "--------------------------------"
-            println publishProperties.repository
-            println publishProperties.validatonURL
-            println publishProperties.groupId
-            println jarInfo.artifactId
-            println jarInfo.getVersion()
-            println "--------------------------------"
-
-            //Setting the properties for the pom and artifactory
-            groupId publishProperties.groupId
-            artifactId jarInfo.artifactId
-            version jarInfo.getVersion()
-            pom.withXml {
-                def buildNode = asNode().appendNode( 'build' )
-                buildNode.appendNode( 'finalName', '${artifactId}_${version}' )
-            }
-
-            //artifact jar
-            artifact jarFolder + "/" + jarName// Publish a file created outside of the build
-        }
+artifacts{
+    //for each jar add a defaultPublishArtifact to the archives configuration
+    repackagedJars.each{ jarName ->
+        archives new DefaultPublishArtifact(jarName, "jar", "jar", null, new Date(), new File("$buildDir", "${jarName}.jar"))
     }
+}
+
+uploadArchives(){
     repositories {
-        maven {
-            url publishProperties.repository
-            credentials {
-                username = publishProperties.username
-                password = publishProperties.password
+        mavenDeployer {
+
+            repackagedJars.each{ jarName ->
+
+                JarInfo jarInfo = new JarInfo(jarName, publishProperties.groupId, publishProperties.validatonURL);
+
+                println "--------------------------------"
+                println "--------------------------------"
+                println publishProperties.repository
+                println publishProperties.validatonURL
+                println publishProperties.groupId
+                println jarInfo.artifactId
+                println jarInfo.getVersion()
+                println "--------------------------------"
+                println "--------------------------------"
+
+                addFilter(jarName) {artifact, file ->
+                    artifact.name == jarName
+                }
+
+                //Setting the properties for the pom and artifactory
+                pom(jarName).artifactId = jarInfo.artifactId
+                pom(jarName).version = jarInfo.getVersion()
+                pom(jarName).groupId = publishProperties.groupId
+                pom(jarName).project {
+                    build {
+                        finalName '${artifactId}_${version}'
+                    }
+                }
+            }
+
+            repository(url: publishProperties.repository) {
+                authentication(userName: publishProperties.username, password: publishProperties.password)
             }
         }
+
     }
 }
 
@@ -68,13 +78,11 @@ class JarInfo {
     String artifactId
     String jarVersion
     String dotVersion
-    String jarName
 
-    JarInfo(String jar, String group, String validationURL) {
+    JarInfo(String jarName, String group, String validationURL) {
 
         groupId = group
-        jarName = jar
-        artifactId = jarName.replace(".jar", "")
+        artifactId = jarName
         String groupFragmentPath = group.replace(".", "/")
 
         String[] nameArray = artifactId.split("_")
@@ -83,7 +91,8 @@ class JarInfo {
         dotVersion = nameArray[2]
 
         //Create the URL in order to check if the artifact exist in artifactory
-        String url = validationURL + groupFragmentPath + '/' + artifactId + '/' + getVersion() + '/' + jarName
+        //String url = validationURL + groupFragmentPath + '/' + artifactId + '/' + getVersion() + '/' + jarName + ".jar"
+        String url = validationURL + groupFragmentPath + '/' + artifactId + '/' + getVersion() + '/' + artifactId + "-" + getVersion() + ".jar"
 
         Boolean exist = exist(url)
         println '+++++++++++++++++++++++++++'
