--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ FileTree artifactsFolderTree
 artifacts{
 
     artifactsFolderTree = fileTree(dir: 'build', includes: ['dot.*.jar'])
-    //Iterate over the contents of a tree
+    //Iterate over the contents of the tree
     artifactsFolderTree.each {File file ->
 
         def fileName = file.name.replace(".jar", "")
@@ -28,7 +28,6 @@ uploadArchives(){
     repositories {
         mavenDeployer {
 
-            //repackagedJars.each{ jarName ->
             artifactsFolderTree.each{ File jarFile ->
 
                 JarInfo jarInfo = new JarInfo(jarFile.name, publishProperties.groupId, publishProperties.validatonURL);
